# task_tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run-tests.yml
task_tracker/: __init__.py  __main__.py  cli.py  enums.py  exceptions.py  interfaces.py  main.py  mixins.py  storage.py  validators.py
task_tracker/models/: __init__.py  base.py  project.py  tasks.py  user.py
tests/: conftest.py  test_cli.py  test_enums.py  test_exceptions.py  test_interfaces.py  test_mixins.py  test_models_base.py  test_models_project.py  test_models_tasks.py  test_models_user.py  test_storage.py  test_validators.py
